--- a/public/index.html
+++ b/public/index.html
@@ -211,6 +211,9 @@
                     <a class="social-link rounded-circle text-white mr-3" style="background-color: #c613c9;" href="https://www.instagram.com/01_ohm/" target="_blank"><i class="icon-social-instagram"></i></a>
                 </li>
                 <li class="list-inline-item">
+                    <a class="social-link rounded-circle text-white" style="background-color: #c613c9;" href="https://www.facebook.com/jrtuporn.santupohm/" target="_blank"><i class="icon-social-facebook"></i></a>
+                </li>
+                <li class="list-inline-item">
                     <a class="social-link rounded-circle text-white" style="background-color: #c613c9;" href="https://github.com/Yoneya-ohm1221" target="_blank"><i class="icon-social-github"></i></a>
                 </li>
             </ul>
