--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
     <link href="css/styles.css" rel="stylesheet" />
-    <script src="js/scripts.js"></script>
+
 </head>
 
 <body id="page-top">
@@ -35,7 +35,7 @@
     <header class="masthead d-flex align-items-center">
         <div class="container px-4 px-lg-5 text-center">
             <img id="myimg" src="assets/img/me.jpg" alt="">
-            <h1 class="word" data-text="JATUPORN SAENTHIP">JATUPORN SAENTHIP</h1>
+            <h1 class="mb-1" data-text="JATUPORN SAENTHIP">JATUPORN SAENTHIP</h1>
             <h3 class="mb-5"><em>Mobile Developer</em></h3>
             <a class="btn btn-primary btn-xl" href="#about">About Me!!</a>
         </div>
@@ -44,7 +44,7 @@
     <section class="content-section bg-light" id="about">
         <div class="container px-4 px-lg-5 text-center">
             <div class="row gx-4 gx-lg-5 justify-content-center">
-                <div class="myname">
+                <div class="col-lg-10">
                     <h2>Hi I'm Ohm, a Mobile Developer</h2>
                     </br>
                     <p class="lead mb-5">
