--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
         <div class="container px-4 px-lg-5 text-center">
             <img id="myimg" src="assets/img/me.jpg" alt="">
             <h1 class="mb-1" data-text="JATUPORN SAENTHIP">JATUPORN SAENTHIP</h1>
-            <h3 class="mb-5"><em>Mobile Developer</em></h3>
+            <h3 class="mb-5"><em>Android Developer</em></h3>
             <a class="btn btn-primary btn-xl" href="#about">About Me!!</a>
         </div>
     </header>
@@ -45,7 +45,7 @@
         <div class="container px-4 px-lg-5 text-center">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-lg-10">
-                    <h2>Hi I'm Ohm, a Mobile Developer</h2>
+                    <h2>Hi I'm Ohm, a Android Developer</h2>
                     </br>
                     <p class="lead mb-5">
                         Hello, my name is Ohm. I'm <span id="myage">00</span> years old. </br> I love to develop. ready to learn new things
