age calculate func

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
                     <!-- <h5><a href="assets/img/resume_jatuporn.pdf"  target="_blank"> Download my resume</a></h5> -->
                     <!-- </br> -->
                     <p class="lead mb-5">
-                        Hello, My name is Ohm. I'm <span id="myage">00</span> years old. </br> I love to develop. can work with team as agile ,ready to learn new things and grow up
+                        Hello, My name is Ohm. I'm <span id="myage">00</span> years old. </br> I like to develop. can work with team as agile ,ready to learn new things and grow up
                     </p>
 
                     <h2>My Skill</h2>
